z-index correcto entre header y carousel

--- a/css/style.css
+++ b/css/style.css
@@ -205,6 +205,10 @@ nav .toggle {
   display: none;
 }
 
+.carousel {
+  z-index: 0;
+}
+
 .carousel-item img {
   width: 85% !important;
   margin: auto;
